@@ -158,18 +158,6 @@ Description: development headers for GObject Python bindings
  This package contains the development headers needed to build C extensions
  which use pygobject.
 
-Package: python-gobject
-Architecture: all
-Pre-Depends: ${misc:Pre-Depends}
-Depends: ${misc:Depends},
-         python-gi (>= ${source:Version}),
-         python-gobject-2
-Description: Python 2.x bindings for GObject - transitional package 
- This package will bring the two versions of GObject Python modules: the 
- deprecated gobject module, and the new gobject-introspection system. It 
- is here for upgrade purposes only. You can remove it safely when 
- nothing else depends on it.
-
 Package: python3-gi-cairo
 Architecture: any
 Pre-Depends: ${misc:Pre-Depends}
@@ -185,8 +173,22 @@ Description: Python 3 Cairo bindings for the GObject library
  This package contains the Python 3 Cairo bindings for GObject. It is mostly
  used by other bindings to map their GObjects to Python objects.
 
+Package: python-gobject
+Section: oldlibs
+Priority: extra
+Architecture: all
+Pre-Depends: ${misc:Pre-Depends}
+Depends: ${misc:Depends},
+         python-gi (>= ${source:Version}),
+         python-gobject-2
+Description: Python 2.x bindings for GObject - transitional package 
+ This package will bring the two versions of GObject Python modules: the 
+ deprecated gobject module, and the new gobject-introspection system. It 
+ is here for upgrade purposes only. You can remove it safely when 
+ nothing else depends on it.
+
 Package: python-gobject-dbg
-Section: debug
+Section: oldlibs
 Priority: extra
 Architecture: all
 Pre-Depends: ${misc:Pre-Depends}
@@ -200,6 +202,8 @@ Description: Python 2.x debugging modules for GObject - transitional package
  You can remove it safely when nothing else depends on it.
 
 Package: python-gobject-dev
+Section: oldlibs
+Priority: extra
 Architecture: all
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends},
