@@ -2,6 +2,8 @@ pygobject (3.4.2-3) UNRELEASED; urgency=low
 
   * debian/control.in: Make python-gi-dev Arch: any, as it now uses multiarch
     paths for the pkg-config file.
+  * debian/control.in: Put transitional packages into section oldlibs, and
+    priority extra. Thanks lintian.
 
  -- Martin Pitt <mpitt@debian.org>  Thu, 29 Nov 2012 08:48:42 +0100
 
